--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,20 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
-        cache: 'npm'
+        cache: "npm"
 
     - name: Build
       run: |
         npm install
         npm run build
+
+    - name: Fix permissions
+      run: |
+        chmod -c -R +rX "dist/" | while read line; do
+          echo "::warning title=Invalid file permissions automatically fixed::$line"
+        done
+  
+    - name: Upload Pages artifact
+      uses: actions/upload-pages-artifact@v2
+      with:
+        path: "dist/"
