--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Build
       run: |
         npm install
-        npm run build
+        npm run build -- --base=/easy-charts/
 
     - name: Fix permissions
       run: |
